--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,20 @@ body {
 footer {
   margin-top: auto;
 }
+
+input,
+textarea {
+  outline: none;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  --moz-appearance: textfield;
+}
